--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"></html>
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"›
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purpose of Vending Machines</title>
+    <title>Quick Money Ideas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<div id="header'">
+    <div class="container">
+    <nav>
+    <img src="portfolio/logo.png" class="logo"›
+    <ul>
+    ‹li>‹a href="#"›Home‹/a›‹/li> ‹li›‹a href="#"›About‹/a›‹/li> <li><a href="#"›Servk/a>‹/li> ‹li>‹a href="#"›Home‹/a›‹/li>
+    ‹li>‹a href="#"›Home‹/a›‹/li> </ul>
+    </nav>
+</div>
+
 </body>
+
 </html>
