--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <nav>
     <img src="portfolio/logo.png" class="logo"›
     <ul>
-    ‹li>‹a href="#"›Home‹/a›‹/li> ‹li›‹a href="#"›About‹/a›‹/li> <li><a href="#"›Servk/a>‹/li> ‹li>‹a href="#"›Home‹/a›‹/li>
+    ‹li>‹a href="#"›Home‹/a›‹/li> 
+    ‹li›‹a href="#"›About‹/a›‹/li> 
+    <li><a href="#"›Servk/a>‹/li> 
+     ‹li>‹a href="#"›Home‹/a›‹/li>
     ‹li>‹a href="#"›Home‹/a›‹/li> </ul>
     </nav>
 </div>
